# ha-feuxdeforet-fr

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements_ha_test.txt  requirements_test.txt
.github/workflows/: ci.yml
custom_components/: __init__.py
custom_components/feuxdeforet_fr/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  geo_location.py  helpers.py  manifest.json  models.py  sensor.py  services.yaml  strings.json
custom_components/feuxdeforet_fr/translations/: en.json  fr.json
examples/: automation_department.yaml  automation_proximity.yaml  automation_zone.yaml  dashboard.yaml  dashboard_summary.yaml
tests/: test_config_flow_source.py  test_examples.py  test_geo_location_source.py  test_helpers.py  test_last_update_source.py  test_metadata.py
tests_ha/: conftest.py  test_config_flow.py
